--- a/app/src/main/res/layout/page_register1.xml
+++ b/app/src/main/res/layout/page_register1.xml
@@ -104,7 +104,7 @@
         android:layout_alignStart="@+id/editText2" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/textName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -114,7 +114,7 @@
         android:layout_alignLeft="@+id/textView8"
         android:layout_alignStart="@+id/textView8" />
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/textLastname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
