--- a/app/src/main/res/layout/page_login.xml
+++ b/app/src/main/res/layout/page_login.xml
@@ -80,5 +80,17 @@
 
     </com.google.android.gms.common.SignInButton>
 
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="19dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="Katunyou Ver.01" />
+
 
 </RelativeLayout>
